--- a/SmileCameraViewController/SmileCameraViewController.xib
+++ b/SmileCameraViewController/SmileCameraViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -26,45 +26,45 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbf-ym-c8B">
-                            <rect key="frame" x="175" y="2" width="50" height="50"/>
+                            <rect key="frame" x="180" y="7" width="40" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <state key="normal" image="reload-75">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="retakeItemPressed:" destination="-1" eventType="touchUpInside" id="sYK-uh-hMF"/>
+                                <action selector="retakePhotoButtonPressed:" destination="-1" eventType="touchUpInside" id="0Vr-YA-lJt"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MQt-BF-6Xb">
-                            <rect key="frame" x="20" y="2" width="50" height="50"/>
+                            <rect key="frame" x="20" y="7" width="40" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <state key="normal" image="twitter-75">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="retakeItemPressed:" destination="-1" eventType="touchUpInside" id="J1y-tn-pCQ"/>
+                                <action selector="retakePhotoButtonPressed:" destination="-1" eventType="touchUpInside" id="OhK-Q2-sn5"/>
                                 <action selector="shareViaTwitter:" destination="-1" eventType="touchUpInside" id="Ycb-dL-r88"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E77-PY-3jg">
-                            <rect key="frame" x="100" y="2" width="50" height="50"/>
+                            <rect key="frame" x="100" y="7" width="40" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <state key="normal" image="facebook-75">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="retakeItemPressed:" destination="-1" eventType="touchUpInside" id="TM7-WR-GzE"/>
+                                <action selector="retakePhotoButtonPressed:" destination="-1" eventType="touchUpInside" id="tXA-Fb-wp7"/>
                                 <action selector="shareViaFacebook:" destination="-1" eventType="touchUpInside" id="Fhj-nP-Xce"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fsv-fX-YaU">
-                            <rect key="frame" x="250" y="2" width="50" height="50"/>
+                            <rect key="frame" x="250" y="7" width="40" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <state key="normal" image="instagram-75">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="retakeItemPressed:" destination="-1" eventType="touchUpInside" id="uLh-wG-hg9"/>
+                                <action selector="retakePhotoButtonPressed:" destination="-1" eventType="touchUpInside" id="cuM-eZ-9MI"/>
                                 <action selector="shareViaInstagram:" destination="-1" eventType="touchUpInside" id="G8O-e7-Vpp"/>
                             </connections>
                         </button>
