--- a/SmileViewController/SmileViewController.xib
+++ b/SmileViewController/SmileViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SmileViewController">
@@ -17,55 +18,49 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gCm-ut-r28">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="550"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TgQ-vh-YLn">
-                    <rect key="frame" x="0.0" y="550" width="600" height="50"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbf-ym-c8B">
-                            <rect key="frame" x="300" y="10" width="150" height="30"/>
-                            <state key="normal" image="reload-75">
-                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <state key="normal">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
                                 <action selector="retakePhotoButtonPressed:" destination="-1" eventType="touchUpInside" id="0Vr-YA-lJt"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MQt-BF-6Xb">
-                            <rect key="frame" x="0.0" y="10" width="150" height="30"/>
                             <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
-                            <state key="normal" image="twitter-75">
-                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <state key="normal">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
                                 <action selector="shareViaTwitter:" destination="-1" eventType="touchUpInside" id="Ycb-dL-r88"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E77-PY-3jg">
-                            <rect key="frame" x="150" y="10" width="150" height="30"/>
-                            <state key="normal" image="facebook-75">
-                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <state key="normal">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
                                 <action selector="shareViaFacebook:" destination="-1" eventType="touchUpInside" id="Fhj-nP-Xce"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fsv-fX-YaU">
-                            <rect key="frame" x="450" y="10" width="150" height="30"/>
-                            <state key="normal" image="instagram-75">
-                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <state key="normal">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
                                 <action selector="shareViaInstagram:" destination="-1" eventType="touchUpInside" id="G8O-e7-Vpp"/>
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="fsv-fX-YaU" firstAttribute="leading" secondItem="tbf-ym-c8B" secondAttribute="trailing" id="5SA-dY-cBT"/>
                         <constraint firstAttribute="bottom" secondItem="MQt-BF-6Xb" secondAttribute="bottom" constant="10" id="F1m-ua-7co"/>
@@ -87,7 +82,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="TgQ-vh-YLn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ADk-tJ-7Nf"/>
                 <constraint firstItem="gCm-ut-r28" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="DcG-n0-8C3"/>
@@ -98,13 +93,7 @@
                 <constraint firstAttribute="bottom" secondItem="TgQ-vh-YLn" secondAttribute="bottom" id="vX1-xn-M7z"/>
             </constraints>
             <modalFormSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-102" y="379"/>
+            <point key="canvasLocation" x="-82" y="147"/>
         </view>
     </objects>
-    <resources>
-        <image name="facebook-75" width="75" height="75"/>
-        <image name="instagram-75" width="75" height="75"/>
-        <image name="reload-75" width="75" height="75"/>
-        <image name="twitter-75" width="75" height="75"/>
-    </resources>
 </document>
